fix positioning for annotation modal, add viewport tag in index.html, add overflow-y scroll for annotation sidebar

--- a/app/app.less
+++ b/app/app.less
@@ -4,19 +4,18 @@
   }
   .toggle-status {
     background-color: #E85959; // red
+    cursor: initial;
     &.active {
       background-color: #18F018; // green
     }
   }
   .annotation-modal {
     position: absolute;
-    top: 50%;
     left: 50%;
     transform: translateX(-50%);
     z-index: 10;
     padding: 2em;
     background: white;
-    width: 30%;
     box-shadow: 0 0 7px 0px rgba(0, 0, 0, 0.7);
     .annotation-modal-close {
       outline: none;
