--- a/app/components/annotations/annotations.less
+++ b/app/components/annotations/annotations.less
@@ -1,10 +1,12 @@
 .annotations {
   list-style: none;
+  height: 600px;
+  overflow-y: scroll;
   li {
     border-bottom: 1px solid #D5D3D3;
     margin-bottom: .75em;
     padding-bottom: .75em;
-  } 
+  }
 }
 
 .annotation {
